fix: #18 Product pricing is fixed on both list and detail page

--- a/main/templates/main/addposts.html
+++ b/main/templates/main/addposts.html
@@ -93,9 +93,9 @@
                                 </div>
                                 <div class="col">
                                     <div class="custom-control custom-checkbox ml-3">
-                                        <input type="checkbox" class="custom-control-input" id="customCheck"
-                                            name="example1">
-                                        <label class="custom-control-label" for="customCheck">Negotiable</label>
+                                        <input type="checkbox" class="custom-control-input" id="negotiable"
+                                            name="negotiable">
+                                        <label class="custom-control-label" for="negotiable">Negotiable</label>
                                     </div>
                                 </div>
                             </div>
