--- a/static/css/pages/_product-detail.scss
+++ b/static/css/pages/_product-detail.scss
@@ -1,4 +1,26 @@
 .product-detail {
+	.sharer {
+		margin: 10px 0px;
+
+		.media {
+			border: 1px solid rgba(0, 0, 0, 0.5);
+			display: flex !important;
+			width: 28px;
+			height: 28px;
+			font-size: 14px;
+			margin-left: 5px;
+			align-items: center;
+			justify-content: center;
+			border-radius: 5px;
+			opacity: 0.7;
+			transition: 0.1s ease-in;
+
+			&:hover {
+				background: #eeeeee;
+			}
+		}
+	}
+
 	.detail-content {
 		.sub-heading {
 			font-size: 0.9em;
